# Chess-AI

./: .gitignore  CMakeLists.txt  Chess.sln  Chess.vcxproj  Chess.vcxproj.filters  LICENSE.md  Makefile  README.md
.github/workflows/: release.yml
include/: AiPlayer.h  Bishop.h  Board.h  Button.h  Game.h  King.h  Knight.h  Move.h  Node.h  Pawn.h  Piece.h  Queen.h  Rook.h  Spot.h
include/SFML/Graphics/: Text.hpp
src/: AiPlayer.cpp  Bishop.cpp  Board.cpp  Button.cpp  Game.cpp  King.cpp  Knight.cpp  Move.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp  Spot.cpp  main.cpp
